# rubiks

./: .gitignore  Dockerfile  README.md  abstract.py  build.sh  clear_checkpoints.sh  findings.txt  gen.py  helpers.py  hyper.sh  infer.py  model.py  print_stats.py  rubiks.py  run.sh  simple_example.py  tensorboard.sh  train.py  watch_gpu.sh
cpp_stuff/: CMakeLists.txt  README
cpp_stuff/data/: rubiks_actions.in  rubiks_state.in
cpp_stuff/src/: helpers.cpp  main.cpp
examples/: even_consecutive.axiom
include/: helpers.hpp
model_checkpoints/: checkpoint  cnn1.data-00000-of-00002  cnn1.index  cnn2.index  cnn3.data-00000-of-00002  cnn3.data-00001-of-00002  cnn3.index  cnn4.data-00000-of-00002  cnn4.data-00001-of-00002  cnn4.index  cnn5.data-00000-of-00002  cnn5.data-00001-of-00002  cnn5.index  cnn6.data-00000-of-00002  cnn6.index  cnn7.index  res1-128-0001-00.index  res1-128-0002-00.data-00000-of-00002  res1-128-0002-00.index  res2-100-0005-50.index  res2-200-0001-10.index  res2-200-0001-50.index  res2-200-0005-10.data-00000-of-00002  res2-200-0005-10.index  res3-100-0005-10.index  res3-100-0005-50.index  res3-200-0005-10.data-00000-of-00002  res3-200-0005-10.index  res3-200-0005-50.index
models/: CNN.py  RNN.py
saved_logs/20191228-063605/test/: events.out.tfevents.1577514965.ip-172-31-24-120.65801.13.v2
saved_logs/20191228-063605/train/: events.out.tfevents.1577514965.ip-172-31-24-120.65801.5.v2
saved_logs/20191229-225934/test/: events.out.tfevents.1577660374.ip-172-31-29-59.43150.13.v2
src/: main.cpp
(+110 files in other folders)
